--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,15 @@
-/* * {
-  background-color: #0a0908;
-}
 .App {
-  text-align: center;
-  color: #22333b;
   background-color: #0a0908;
-} */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.landing-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #0a0908;
+  color: #22333b;
+}
