--- a/client/src/components/BackLogCard.css
+++ b/client/src/components/BackLogCard.css
@@ -6,9 +6,16 @@
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   color: antiquewhite;
   text-align: center;
   max-height: 300px;
+  background-color: #22333b;
+  border-radius: 5px;
+  box-shadow: 5px 10px 15px 5px #000000;
 }
 
 .hidden {
@@ -16,6 +23,7 @@
 }
 
 .backlog_cover {
+  padding-top: 5px;
   width: 300px;
   height: 200px;
 }
