--- a/client/src/components/BackLogContainer.css
+++ b/client/src/components/BackLogContainer.css
@@ -2,7 +2,7 @@
   /* height: 95vh; */
   display: flex;
   flex-wrap: wrap;
-  /* align-items: center;
-  justify-content: center; */
+  align-items: center;
+  justify-content: center;
   background-color: #0a0908;
 }
