--- a/client/src/screens/BackLogGallery.css
+++ b/client/src/screens/BackLogGallery.css
@@ -2,4 +2,15 @@
   display: flex;
   background-color: #0a0908;
   width: 100vw;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-backlog-form {
+  color: #c6ac8f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
