--- a/client/src/screens/AddConsole.css
+++ b/client/src/screens/AddConsole.css
@@ -4,4 +4,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50vh;
+}
+
+.add-console-container form {
+  display: flex;
+  flex-direction: column;
 }
