--- a/client/src/components/BackLogCard.css
+++ b/client/src/components/BackLogCard.css
@@ -16,6 +16,7 @@
   background-color: #22333b;
   border-radius: 5px;
   box-shadow: 5px 10px 15px 5px #000000;
+  font-family: "Righteous", cursive;
 }
 
 .hidden {
