--- a/client/src/screens/AddConsole.css
+++ b/client/src/screens/AddConsole.css
@@ -18,3 +18,9 @@
   font-family: "Righteous", cursive;
   background-color: #0a0908;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1025px) {
+}
