--- a/client/src/screens/AddGame.css
+++ b/client/src/screens/AddGame.css
@@ -27,3 +27,10 @@
     width: 60%;
   }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1025px) {
+  .add-game-container img {
+    height: 70%;
+    width: 70%;
+  }
+}
