--- a/client/src/screens/AddConsole.css
+++ b/client/src/screens/AddConsole.css
@@ -4,12 +4,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 30vh;
+  margin-top: 5vh;
   background-color: #0a0908;
 }
 
 .add-console-container h1 {
   font-family: "Monoton", cursive;
+}
+
+.add-console-container img {
+  height: 20%;
+  width: 20%;
 }
 
 .add-console-container form {
@@ -20,7 +25,19 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
+  .add-console-container {
+    margin-left: 10px;
+  }
+
+  .add-console-container img {
+    height: 60%;
+    width: 60%;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1025px) {
+  .add-console-container img {
+    height: 40%;
+    width: 40%;
+  }
 }
