--- a/client/src/screens/AddConsole.css
+++ b/client/src/screens/AddConsole.css
@@ -13,8 +13,12 @@
 }
 
 .add-console-container img {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  border-radius: 40px;
   height: 20%;
   width: 20%;
+  box-shadow: 0 0 50px rgba(102, 101, 101, 0.781);
 }
 
 .add-console-container form {
