--- a/client/src/screens/AddGame.css
+++ b/client/src/screens/AddGame.css
@@ -11,8 +11,12 @@
 }
 
 .add-game-container img {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  border-radius: 40px;
   height: 20%;
   width: 20%;
+  box-shadow: 0 0 50px rgba(102, 101, 101, 0.781);
 }
 .add-game-container form {
   display: flex;
