--- a/client/src/components/BackLogCard.css
+++ b/client/src/components/BackLogCard.css
@@ -10,7 +10,7 @@
   margin-right: 5px;
   margin-bottom: 10px;
   margin-top: 10px;
-  color: antiquewhite;
+  color: #03f7eb;
   text-align: center;
   max-height: 300px;
   background-color: #22333b;
