--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
 
 button {
   box-shadow: inset 0px 1px 3px 0px #91b8b3;
-  background: linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+  background: linear-gradient(to bottom, #757577b2 5%, #b32006 100%);
   background-color: #768d87;
   border-radius: 5px;
   border: 1px solid #566963;
