--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .NavBar {
-  background-color: #5e503f;
+  background-color: #8f8d92;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
