--- a/client/src/screens/AddConsole.css
+++ b/client/src/screens/AddConsole.css
@@ -1,5 +1,5 @@
 .add-console-container {
-  color: #c6ac8f;
+  color: #03f7eb;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,12 @@
   flex-direction: column;
   font-family: "Righteous", cursive;
   background-color: #0a0908;
+}
+
+.add-console-container label {
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
