--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -7,3 +7,17 @@
   width: 100%;
   box-shadow: 5px 10px 15px 5px #000000;
 }
+#hidden {
+  color: #8f8d92;
+}
+
+#hidden #blastoise {
+  display: none;
+  width: 50px;
+  height: auto;
+  padding-bottom: 20px;
+}
+#hidden:hover #blastoise {
+  display: block;
+  padding-bottom: 20px;
+}
